@@ -25,6 +25,7 @@ Features:
 - "help help" now sends an email to the offpunk-users mailing-list
 - "links" command now display all links
 - new "blocked_link" object in theme. By default, blocked link are in red.
+- new "theme preset" to allow switching between multiple hardcoded themes
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
